crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@quicksort.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
Ordenacao Concluida
[-1, 1, 2, 5, 5, 6, 9, 12]
