crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@refined_types.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
5
50
42
42
8
False
5
1
7
10
