crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@stream_fusion.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado `argumento #2 para `map` (aridade padrão 2)`,
  │ encontrado `)`
