crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@trma.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
500000500000
2432902008176640000
